<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaDoce">

    <Button
        android:id="@+id/pb39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/regresar"
        android:onClick="Volver"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/pb40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/siguiente"
        android:onClick="Siguiente"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/pb11"
        android:layout_width="236dp"
        android:layout_height="91dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="preguntaTrece"
        android:text="@string/buton"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <RadioGroup
        android:layout_width="344dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462">

        <RadioButton
            android:id="@+id/op1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/op12.1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/op2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/Op12.2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/op3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/Op12.3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/op4"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/Op12.4"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="364dp"
        android:layout_height="137dp"
        android:text="@string/Pregunta12"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />
</android.support.constraint.ConstraintLayout>